revision code, added the resource Empty